// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`directionStepsReducer properly reduces direction step array 1`] = `
Array [
  Object {
    "text": "step 1",
  },
  Object {
    "text": "step 2",
  },
  Object {
    "text": "step 1",
  },
]
`;

exports[`directionsReducer properly reduces direction array 1`] = `
Array [
  Object {
    "label": "section 1",
    "steps": Array [
      Object {
        "text": "step 1",
      },
    ],
  },
  Object {
    "steps": Array [
      Object {
        "text": "step 1",
      },
      Object {
        "text": "step 2",
      },
    ],
  },
]
`;

exports[`ingredientReducer properly reduces ingredient 1`] = `
Object {
  "amount": Object {
    "max": "10",
    "min": "5",
  },
  "name": "garlic",
  "optional": false,
  "prep": "minced",
  "toTaste": true,
  "unit": "tablespoon",
}
`;

exports[`ingredientsReducer properly reduces ingredients array 1`] = `
Array [
  Object {
    "ingredients": Array [
      Object {
        "amount": "2",
        "name": "apples",
        "optional": true,
        "prep": "chopped",
        "toTaste": true,
        "unit": "cup",
      },
    ],
    "label": "section 1",
  },
  Object {
    "ingredients": Array [
      Object {
        "amount": Object {
          "max": "10",
          "min": "5",
        },
        "name": "garlic",
        "optional": false,
        "prep": "minced",
        "toTaste": true,
        "unit": "tablespoon",
      },
      Object {
        "amount": "3",
        "name": "carrot",
        "optional": undefined,
        "prep": undefined,
        "toTaste": undefined,
        "unit": undefined,
      },
    ],
  },
]
`;

exports[`rangedAmountReducer properly reduces ranged amount 1`] = `
Object {
  "max": "10",
  "min": "5",
}
`;

exports[`tagsReducer properly reduces tags 1`] = `
Array [
  Object {
    "id": "1",
    "recipeid": "2",
    "tagid": "3",
  },
  Object {
    "id": "2",
    "recipeid": "2",
    "tagid": "4",
  },
]
`;

exports[`timeReducer properly reduces direction step array 1`] = `
Array [
  Object {
    "units": "MINUTE",
    "value": "20",
  },
  Object {
    "units": "HOUR",
    "value": "1",
  },
]
`;
